--- a/package.json
+++ b/package.json
@@ -12,8 +12,14 @@
     "cover:compiled": "istanbul cover _mocha -- -r test/require.js --reporter spec test/**/*.test.js",
     "cover": "npm run build -- --source-maps inline && npm run cover:compiled",
     "benchmark": "node -r babel-register -r regenerator-runtime/runtime performance/benchmark-spread.js",
-    "perf": "node -r babel-register -r regenerator-runtime/runtime performance/readonly.js",
     "prepublish": "npm test"
+  },
+  "main": "dist/index.js",
+  "files": [
+    "dist/"
+  ],
+  "engines": {
+    "node": ">= 4"
   },
   "dependencies": {},
   "devDependencies": {
